# ai-science-time-series

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tutorial.py
.github/workflows/: lint.yaml  python.yaml
ai4ts/: __init__.py  arma.py  compare.py  io.py  lag_llama.py  plot.py  timesfm.py
chronos/: README.md  predict-sequence.py  requirements.txt
forecastpfn/: README.md
lag-llama/: README.md  deepar.py  demo1.py  ll-seq.py  predict-sequence.py  requirements.txt
src/ai4ts/: __init__.py  arma.py  chronos.py  compare.py  data.py  io.py  lag_llama.py  model.py  neuralnet.py  timesfm.py
stats/: fit.py  predict-sequence.py
test/: arima.yaml
timesfm/: predict-sequence.py
