[project]
name = "ai4ts"
description = "Utilities for analyzing AI time series models"
version = "2024.09.001"
authors = [
    {name = "Bryce Allen", email = "ballen@anl.gov"},
]
keywords = ["ai", "time series"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "fastparquet",
  "huggingface_hub",
  "matplotlib",
  "numpy",
  "pandas",
  "pyarrow",
  "pyyaml",
  "statsforecast",
  "statsmodels",
  "ujson",
]

[project.optional-dependencies]
chronos = [
  "chronos @ git+https://github.com/amazon-science/chronos-forecasting.git",
]
lag-llama = [
  "lag-llama @ git+https://github.com/time-series-foundation-models/lag-llama.git@main",
]
timesfm = ["timesfm"]
lint = ["black"]
ml = ["ai4ts[chronos,lag-llama,timesfm]"]
all = ["ai4ts[chronos,lag-llama,timesfm,lint]"]

[project.urls]
Homepage = "https://github.com/bd4/ai-science-time-series"

[project.scripts]
ai4ts-arma-gen = "ai4ts.arma:main"
ai4ts-compare = "ai4ts.compare:main"
